<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/grey">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/app_bar_relative_layout"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layoutDirection="ltr">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/logo2"
                android:layout_alignParentStart="true"
                android:id="@+id/logo_image_view"
                android:contentDescription="@string/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="15dp"
                android:text="@string/live_reports"
                android:textSize="25sp"
                android:textColor="#5f3e2e"
                android:layout_toEndOf="@id/logo_image_view"
                android:id="@+id/app_bar_text"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:id="@+id/menu"
                android:src="@drawable/ic_menu"
                android:contentDescription="@string/menu"/>

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>