<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="liveReports.ui.PostReportFragment"
    android:background="@drawable/background_style">

    <include
        android:id="@+id/bar"
        layout="@layout/general_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

<!--    <ScrollView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/bar">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar"
        android:orientation="vertical"
        android:weightSum="100"
        android:padding="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_layout">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:lines="1"
                android:maxLength="15"
                android:maxLines="1"
                android:textColor="#FF000000"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_edit_text"/>

            <EditText
                android:id="@+id/report_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/report_txt_hint"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:maxLines="5"
                android:textSize="20sp"
                android:layout_below="@id/type_spinner"/>
            <ImageView
                android:id="@+id/shared_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/report_edit_text"
                android:contentDescription="@string/shared_img"/>
        </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:layout_weight="20"
            android:id="@+id/rel_layout">

            <Button
                android:id="@+id/btn_upload_photo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_camera" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_submit"
                android:textColor="#F44336"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/submit"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button"/>
        </RelativeLayout>
    </LinearLayout>

<!--    </ScrollView>-->

</RelativeLayout>